# R4C

./: .gitignore  3 task.md  README.md  pyproject.toml
R4C/: settings.py  urls.py
orders/: apps.py  urls.py  utils.py  views.py
robots/: schemas.py  services.py  urls.py  utils.py  views.py
