[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["odnashestaia <odna_shestaia@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
pydantic = "^2.10.3"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
